begin new layout

--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -6,3 +6,18 @@
   border: 1px solid black;
   border-radius: 5px;
 }
+
+#bigbox
+{
+  width: 300px;
+  height: 200px;
+  border: 2px solid black;
+  border-radius: 2px;
+}
+
+body
+{
+background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/37673c6c-fa29-4f37-92bf-f25cba7a2521.jpg');
+background-repeat:no-repeat;
+background-position: center top;
+}
