--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,4 +3,6 @@
 #albums
   = render :partial => 'albums/albums'
 
-="this is a test to see if this actually works! "
+#bigbox
+  ="this is a test to see if this actually works! "
+  = "I don't have to keep deploying on heroku to make a simple sign up sheet!! Just run on localhost!"
