--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -14,3 +14,23 @@ background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/Emot
 background-repeat:no-repeat;
 background-position: center top;
 }
+
+label
+{
+  color: #1598C7;
+}
+
+#mc_embed_signup
+{
+  color: #D37E51;
+
+}
+
+#awesomesauce
+{
+  width: 100%;
+  height: 200px;
+  border: 2px solid #AAAAAA;
+  border-radius: 5px;
+
+}
