--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -22,15 +22,17 @@ label
 
 #mc_embed_signup
 {
-  color: #D37E51;
+  color: #7E7C7E;
+  font-size: 10px;
 
 }
 
 #awesomesauce
 {
-  width: 100%;
+/*  width: 100%;
   height: 200px;
   border: 2px solid #AAAAAA;
-  border-radius: 5px;
+  border-radius: 5px;*/
 
 }
+
