--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -14,7 +14,7 @@
            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
       #mc_embed_signup
         %form#mc-embedded-subscribe-form.validate{:action => "http://emotitones.us7.list-manage1.com/subscribe/post?u=aa1d15615c442d6da4ab9d765&id=56c9b03f76", :method => "post", :name => "mc-embedded-subscribe-form", :novalidate => "", :target => "_blank"}
-          %label{:for => "mce-EMAIL"} Emotitones 2.0 is coming. Sign up to be the first to know or scan the QR to become a VIP :-)
+          %label{:for => "mce-EMAIL"} Emotitones 2.0 is coming. Sign up to be the first to know & become one of our VIPs!
           * We will not spam. VIPs get invites to secret meetups, product exclusives, random acts of kindness, and creations from our community of artists.
           %input#mce-EMAIL.email{:name => "EMAIL", :placeholder => "email address", :required => "", :type => "email", :value => ""}/
           .clear
@@ -23,5 +23,3 @@
     .large-4.columns
   .large-12.columns
     #awesomesauce
-      =image_tag("http://eepurl.com/Ayf0D.qr.16")
-
