--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Albm</title>
+  <title>Emotitones</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -14,8 +14,11 @@
   <script>
   $(document).foundation();
   </script>
-  <div class='footer'>
-   <%= render :partial => 'layouts/footer' %>
-  </div>
+
 </body>
+<div id='awesomesauce'>
+  <div class='footer'>
+    <%= render :partial => 'layouts/footer' %>
+  </div>
+</div>
 </html>
