--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -8,31 +8,44 @@
 }
 
 
-body
+#emotitoneslogo
 {
-background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/EmotitonesLogo111007.jpg');
-background-repeat:no-repeat;
-background-position: center top;
+  width: 1024px;
+  height: 200px;
+  margin-top: 20px;
+  background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/emotitones_finalresized.png');
+  background-repeat:no-repeat;
+  background-position: center top;
 }
 
 label
 {
-  color: #1598C7;
+  color: white;
 }
 
 #mc_embed_signup
 {
-  color: #7E7C7E;
+  color: black;
   font-size: 10px;
+  border-radius: 10px;
 
 }
 
 #awesomesauce
 {
-/*  width: 100%;
-  height: 200px;
-  border: 2px solid #AAAAAA;
-  border-radius: 5px;*/
+  width: 100%;
+  height: 150px;
+  background-color: black;
 
 }
 
+.footer
+{
+  margin-top: 100px;
+  text-align: bottom;
+}
+
+.footer a
+{
+  color: #DC593E;
+}
