--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,13 +3,17 @@
 / #albums
 /   = render :partial => 'albums/albums'
 
+
 .row
   .large-12.columns
+    .large-10.columns
+      #emotitoneslogo
+    .large-2.columns
     .large-8.columns
       / Begin MailChimp Signup Form
       %link{:href => "http://cdn-images.mailchimp.com/embedcode/slim-081711.css", :rel => "stylesheet", :type => "text/css"}/
       :css
-        #mc_embed_signup{background:#fff; clear:left; margin-top: 200px; font:14px Helvetica,Arial,sans-serif; }
+        #mc_embed_signup{background:#00ABD4; clear:left; margin-top: 30px; font:14px Helvetica,Arial,sans-serif; }
         /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
       #mc_embed_signup
@@ -21,5 +25,6 @@
             %input#mc-embedded-subscribe.button{:name => "subscribe", :type => "submit", :value => "Subscribe"}/
       / End mc_embed_signup
     .large-4.columns
-  .large-12.columns
-    #awesomesauce
+
+
+
