exchange the png for the jpg

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="row">
   <div class="large-12 columns">
-        <h6 class='subheader'>&copy; <%= link_to("Beyond Sound Media", 'http://www.beyondsoundmedia.com', :target => '_blank') %> 2013</h6>
+        <h6 class='subheader'>&copy; Beyond Sound Media 2013</h6>
   </div>
 </footer>
