--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -13,7 +13,7 @@
   width: 1024px;
   height: 200px;
   margin-top: 20px;
-  background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/emotitones_finalresized.png');
+  background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/emotitones_finalresized-1.jpg');
   background-repeat:no-repeat;
   background-position: center top;
 }
@@ -37,15 +37,20 @@ label
   height: 150px;
   background-color: black;
 
+
 }
 
 .footer
 {
   margin-top: 100px;
-  text-align: bottom;
 }
 
 .footer a
+{
+  color: #DC593E;
+}
+
+.subheader
 {
   color: #DC593E;
 }
