--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -54,3 +54,16 @@ label
 {
   color: #DC593E;
 }
+
+
+#whattext
+{
+  margin-top: 40px;
+  font-size: 14px;
+}
+
+#pitchtext
+{
+  font-size: 20px;
+  font-family: 'Average Sans', sans-serif;
+}
