--- a/app/views/signups/index.html.haml
+++ b/app/views/signups/index.html.haml
@@ -1,1 +1,22 @@
-= "hello!!!"
+.row
+  .large-8.columns
+    #whattext
+      = "**Emotitones existed previously as a thesis, a web beta, and an iPhone app. But there's no time for looking back... onward we go!"
+      %br
+      %br
+      %br
+    #pitchtext
+      = "As our society evolves, so must our communication tools. Social interactions should be more meaningful."
+      %br
+      %br
+      = "Emotitones is simply one of these tools."
+      %br
+      = "Instead of sending plain text messages with smileys (we love emoji too), find short speech, literature, or musical excerpts that express your precise sentiments."
+      %br
+      %br
+      = "By sending these emotitones, the creativity and emotion of various art forms will be brought into every day communication."
+      %br
+      %br
+      = 'Encourage others. Love, educate, express yourself... and ever be misinterpreted again, as emotitones are "more than words".'
+      %br
+  .large-4.columns
