--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -6,6 +6,7 @@
     </div>
     <ul class="button-group">
       <li><%= link_to('Home', root_path, :class => 'button medium') %></li>
+      <li><%= link_to('What?', signups_path, :class => 'button medium') %></li>
       <li><%= link_to('Research', "http://www.scribd.com/doc/98494327/Emotitones-Thesis", :target => '_blank', :class => 'button medium') %></li>
 
     </ul>
