--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="row">
   <div class="large-12 columns">
-        <h6 class='subheader'>&copy; Beyond Sound Media 2013</h6>
+        <h6 class='subheader'>&copy; Beyond Sound Media 2013 &nbsp;&nbsp;&nbsp; contact: &nbsp;hello@emotitones.com</h6>
   </div>
 </footer>
