--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -1,21 +1,14 @@
-.photo
-{
-  float: left;
-  margin: 15px;
-  padding: 5px;
-  border: 1px solid black;
-  border-radius: 5px;
-}
+
 
 
 #emotitoneslogo
 {
   width: 1024px;
   height: 200px;
-  margin-top: 20px;
+  margin-top: 40px;
   background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/emotitones_finalresized-1.jpg');
   background-repeat:no-repeat;
-  background-position: center top;
+  background-size: 80% auto;
 }
 
 label
@@ -28,13 +21,14 @@ label
   color: black;
   font-size: 10px;
   border-radius: 10px;
+  margin-left: 10px;
 
 }
 
 #awesomesauce
 {
   width: 100%;
-  height: 150px;
+  height: 100px;
   background-color: black;
 
 
@@ -42,7 +36,7 @@ label
 
 .footer
 {
-  margin-top: 100px;
+  margin-top: 130px;
 }
 
 .footer a
@@ -53,6 +47,7 @@ label
 .subheader
 {
   color: #DC593E;
+  text-align: center;
 }
 
 
@@ -60,10 +55,12 @@ label
 {
   margin-top: 40px;
   font-size: 14px;
+  font-family: 'Average Sans', sans-serif;
 }
 
 #pitchtext
 {
   font-size: 20px;
   font-family: 'Average Sans', sans-serif;
+  margin-bottom: 110px;
 }
