--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -5,7 +5,7 @@
 {
   width: 1024px;
   height: 200px;
-  margin-top: 40px;
+  margin-top: 55px;
   background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/emotitones_finalresized-1.jpg');
   background-repeat:no-repeat;
   background-size: 80% auto;
@@ -22,8 +22,10 @@ label
   font-size: 10px;
   border-radius: 10px;
   margin-left: 10px;
+  margin-right: 10px;
 
 }
+
 
 #awesomesauce
 {
@@ -36,7 +38,7 @@ label
 
 .footer
 {
-  margin-top: 130px;
+  margin-top: 110px;
 }
 
 .footer a
@@ -53,7 +55,7 @@ label
 
 #whattext
 {
-  margin-top: 40px;
+  margin-top: 70px;
   font-size: 14px;
   font-family: 'Average Sans', sans-serif;
 }
@@ -62,5 +64,5 @@ label
 {
   font-size: 20px;
   font-family: 'Average Sans', sans-serif;
-  margin-bottom: 110px;
+  margin-bottom: 120px;
 }
