--- a/app/assets/stylesheets/photoalbm.scss
+++ b/app/assets/stylesheets/photoalbm.scss
@@ -5,10 +5,26 @@
 {
   width: 1024px;
   height: 200px;
-  margin-top: 55px;
+  margin-top: 28px;
   background-image:url('http://i1081.photobucket.com/albums/j359/shefalimusic/emotitones_finalresized-1.jpg');
   background-repeat:no-repeat;
   background-size: 80% auto;
+  background-position: center;
+}
+
+#morethanwords
+{
+  margin-top: -55px;
+  margin-left: 460px;
+  font-size: 36px;
+  margin-bottom: 65px;
+  font-family: 'Monda', sans-serif;
+  background-color: #DFE0E2;
+  width: 300px;
+  text-align: center;
+  border-radius: 5px;
+  color: white;
+
 }
 
 label
@@ -21,7 +37,7 @@ label
   color: black;
   font-size: 10px;
   border-radius: 10px;
-  margin-left: 10px;
+  margin-left: 200px;
   margin-right: 10px;
 
 }
@@ -56,13 +72,20 @@ label
 #whattext
 {
   margin-top: 70px;
-  font-size: 14px;
+  margin-left: 180px;
+  font-size: 18px;
   font-family: 'Average Sans', sans-serif;
 }
 
 #pitchtext
 {
   font-size: 20px;
+  margin-left: 180px;
   font-family: 'Average Sans', sans-serif;
-  margin-bottom: 120px;
+  margin-bottom: 80px;
+  padding: 20px;
+  background-color: #DFE0E2;
+  border-radius: 10px;
+
+
 }
